Fix T87055: Crash applying modifier on mesh with multires data